Revert "Completed Exception Handling and Added Field Validation."
This reverts commit 67706917